--- a/sortmet/catalog-second.html
+++ b/sortmet/catalog-second.html
@@ -185,7 +185,7 @@
 				<div class="count">246 товаров</div>
 			</div>
 			<div class="catalog-section">
-				<div class="sections">
+				<!-- <div class="sections">
 					<a href="#" class="sections__item">
 						<img src="images/dest/catalog-section-1.webp" alt="" class="sections__item-image">
 						<div class="sections__item-content">
@@ -234,7 +234,7 @@
 						<div class="tags-second__arrow tags-second__arrow_next arrow arrow_next" id="catalog-tags-slider-arrow-next"></div>
 						<div class="tags-second__arrow tags-second__arrow_prev arrow arrow_prev" id="catalog-tags-slider-arrow-prev"></div>
 					</div>
-				</div>
+				</div> -->
 				<div class="catalog-section__inner">
 					<div class="catalog-section__filter filter">
 						<div class="filter__block">
@@ -470,6 +470,8 @@
 								</div>
 							</div>
 						</div>
+						<div class="filter__btn btn">Применить фильтры</div>
+						<div class="filter__btn btn btn-second">Сбросить все</div>
 					</div>
 					<div class="catalog-section__list">
 						<div class="catalog-section__actions">
@@ -482,7 +484,7 @@
 									<div class="sort__item">По названию(Я-А)</div>
 								</div>
 							</div>
-							<div class="view">
+							<div class="view catalog-section__view">
 								<div class="view__count count">Найдено товаров: 376</div>
 								<div class="view__list">
 									<div class="view__item view__item_active">
@@ -497,6 +499,7 @@
 									</div>
 								</div>
 							</div>
+							<div class="catalog-section__filter-icon filter-icon">Фильтры</div>
 						</div>
 						<div class="catalog-section__filters filters">
 							<div class="filters__item">Размер: 20 мм</div>
@@ -505,7 +508,6 @@
 							<div class="filters__item filters__item_clear">Очистить все</div>
 						</div>
 						<div class="catalog-section__list-inner">
-						
 
 							<div class="catalog-section__item catalog-section__item_show-mob card">
 								<div class="card__image">
@@ -553,7 +555,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="card__buy btn-buy"><span>Купить</span></div>	
+									<div class="card__buy btn-buy btn-buy"><span>Купить</span></div>	
 									<div class="card__mobile-actions mobile-actions">
 										<div class="mobile-actions__item mobile-actions__item_buy">
 											<svg class="mobile-actions__item-icon mobile-actions__item-icon_default" width="24" height="24">
@@ -1436,6 +1438,7 @@
 											</div>
 											<div class="card-line__price-current">49 000 ₽/тн</div>
 											<div class="card-line__price-old">102 800 р</div>
+											<div class="card-line__avaliable">В наличии</div>
 										</div>
 										<div class="card-line__actions actions">
 											<div class="actions__item">
@@ -1456,7 +1459,7 @@
 											</div>
 										</div>	
 									</div>
-									<div class="card-line__buy btn-buy"><span>Купить</span></div>	
+									<div class="card-line__buy btn-buy btn-buy_second"><span>Купить</span></div>	
 								</div>
 							</div>
 							<div class="catalog-section__item-line catalog-section__item-line_hide-mob card-line">
@@ -1506,6 +1509,7 @@
 									<div class="card-line__right-inner">
 										<div class="card-line__right-price">
 											<div class="card-line__price-current">73 100 ₽/тн</div>
+											<div class="card-line__avaliable">В наличии</div>
 										</div>
 										<div class="card-line__actions actions">
 											<div class="actions__item">
@@ -1526,7 +1530,7 @@
 											</div>
 										</div>	
 									</div>
-									<div class="card-line__buy btn-buy"><span>Купить</span></div>	
+									<div class="card-line__buy btn-buy btn-buy_second"><span>Купить</span></div>		
 								</div>
 							</div>
 							<div class="catalog-section__item-line catalog-section__item-line_hide-mob card-line">
@@ -1580,6 +1584,7 @@
 											</div>
 											<div class="card-line__price-current">99 900 ₽/тн</div>
 											<div class="card-line__price-old">102 800 р</div>
+											<div class="card-line__avaliable">В наличии</div>
 										</div>
 										<div class="card-line__actions actions">
 											<div class="actions__item">
@@ -1600,7 +1605,7 @@
 											</div>
 										</div>	
 									</div>
-									<div class="card-line__buy btn-buy"><span>Купить</span></div>	
+									<div class="card-line__buy btn-buy btn-buy_second"><span>Купить</span></div>		
 								</div>
 							</div>
 							<div class="catalog-section__item-line catalog-section__item-line_hide-mob card-line">
@@ -1650,6 +1655,8 @@
 									<div class="card-line__right-inner">
 										<div class="card-line__right-price">
 											<div class="card-line__price-current">101 750 ₽/тн</div>
+											<div class="card-line__avaliable">В наличии</div>
+
 										</div>
 										<div class="card-line__actions actions">
 											<div class="actions__item">
@@ -1670,7 +1677,7 @@
 											</div>
 										</div>	
 									</div>
-									<div class="card-line__buy btn-buy"><span>Купить</span></div>	
+									<div class="card-line__buy btn-buy btn-buy_second"><span>Купить</span></div>		
 								</div>
 							</div>
 							<div class="catalog-section__item-line catalog-section__item-line_hide-mob card-line">
@@ -1727,6 +1734,8 @@
 											</div>
 											<div class="card-line__price-current">49 000 ₽/тн</div>
 											<div class="card-line__price-old">102 800 р</div>
+											<div class="card-line__avaliable">В наличии</div>
+
 										</div>
 										<div class="card-line__actions actions">
 											<div class="actions__item">
@@ -1747,7 +1756,7 @@
 											</div>
 										</div>	
 									</div>
-									<div class="card-line__buy btn-buy"><span>Купить</span></div>	
+									<div class="card-line__buy btn-buy btn-buy_second"><span>Купить</span></div>		
 								</div>
 							</div>
 							<div class="catalog-section__item-line catalog-section__item-line_hide-mob card-line">
@@ -1797,6 +1806,8 @@
 									<div class="card-line__right-inner">
 										<div class="card-line__right-price">
 											<div class="card-line__price-current">73 100 ₽/тн</div>
+											<div class="card-line__avaliable">В наличии</div>
+
 										</div>
 										<div class="card-line__actions actions">
 											<div class="actions__item">
@@ -1817,7 +1828,7 @@
 											</div>
 										</div>	
 									</div>
-									<div class="card-line__buy btn-buy"><span>Купить</span></div>	
+									<div class="card-line__buy btn-buy btn-buy_second"><span>Купить</span></div>		
 								</div>
 							</div>
 							<div class="catalog-section__item-line catalog-section__item-line_hide-mob card-line">
@@ -1871,6 +1882,8 @@
 											</div>
 											<div class="card-line__price-current">99 900 ₽/тн</div>
 											<div class="card-line__price-old">102 800 р</div>
+											<div class="card-line__avaliable">В наличии</div>
+
 										</div>
 										<div class="card-line__actions actions">
 											<div class="actions__item">
@@ -1891,7 +1904,7 @@
 											</div>
 										</div>	
 									</div>
-									<div class="card-line__buy btn-buy"><span>Купить</span></div>	
+									<div class="card-line__buy btn-buy btn-buy_second"><span>Купить</span></div>		
 								</div>
 							</div>
 						</div>
