--- a/sortmet/catalog.html
+++ b/sortmet/catalog.html
@@ -215,7 +215,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="tags-second">
+				<div class="catalog-section__tags-second tags-second">
 					<div class="tags-second__slider swiper" id="catalog-tags-slider">
 						<div class="swiper-wrapper">
 							<a href="#" class="tags-second__item swiper-slide">Оцинкованный 20x20x4</a>
@@ -471,6 +471,8 @@
 								</div>
 							</div>
 						</div>
+						<div class="filter__btn btn">Применить фильтры</div>
+						<div class="filter__btn btn btn-second">Сбросить все</div>
 					</div>
 					<div class="catalog-section__list">
 						<div class="catalog-section__actions">
@@ -2536,7 +2538,7 @@
 					<div class="seo__controller" id="seo-controller" data-text="Свернуть текст">Развернуть текст</div>
 				</section>
 				<section class="regions">
-					<div class="title">Сортмет регионы</div>
+					<div class="title title_mb">Сортмет регионы</div>
 					<div class="regions__inner" id="regions">
 						<a href="#" class="regions__item">Краснодар</a>
 						<a href="#" class="regions__item">Саратов</a>
