--- a/msi-xmas/index.html
+++ b/msi-xmas/index.html
@@ -14,7 +14,7 @@
 			</a>
 			<section class="banner">
 				<div class="banner__tagline">
-					<img src="images/dest/tagline.png" alt="">
+					<img src="images/dest/tagline-new.png" alt="">
 				</div>
 				<div class="banner__images">
 					<div class="banner__image">
@@ -31,7 +31,7 @@
 			<div class="wrapper">
 				<section class="stories">
 					<div class="stories__title title">Наши истории</div>
-					<div class="stories__text">Ежедневные дела и задачи часто отвлекают нас от того, что действительно важно. Чтобы оставить больше времени на прекрасные моменты, а не на выбор подарков, мы подготовили наши предложения для вас и ваших близких!</div>
+					<div class="stories__text">Жизнь прекрасна и замечательна, а поэтому важно ценить каждый миг, получать удовольствие от происходящего, и ценить сердечные моменты с родными! Радость можно найти даже в самых незначительных и мимолетных вещах, не так ли? Главное - научиться ловить такие моменты! </div>
 					<div class="stories__list">
 						<div class="stories__item">
 							<div class="stories__item-image">
@@ -83,13 +83,13 @@
 							<img src="images/dest/offer-1.png" alt="" class="offers__item-image">
 							<div class="offers__item-type">Игровой десктоп</div>
 							<div class="offers__item-name">MAG Codex 5</div>
-							<div class="offers__item-btn btn">Подробнее</div>
+							<a href="#" class="offers__item-btn btn">Подробнее</a>
 						</div>
 						<div class="offers__item">
 							<img src="images/dest/offer-2.png" alt="" class="offers__item-image">
 							<div class="offers__item-type">Игровой монитор</div>
 							<div class="offers__item-name">Optix MAG321QR</div>
-							<div class="offers__item-btn btn">Подробнее</div>
+							<a href="#" class="offers__item-btn btn">Подробнее</a>
 						</div>
 						<div class="offers__lucky">
 							<img src="images/dest/lucky.png" alt="" class="offers__lucky-image">
@@ -98,13 +98,13 @@
 							<img src="images/dest/offer-3.png" alt="" class="offers__item-image">
 							<div class="offers__item-type">Моноблок</div>
 							<div class="offers__item-name">Modern AM242</div>
-							<div class="offers__item-btn btn">Подробнее</div>
+							<a href="#" class="offers__item-btn btn">Подробнее</a>
 						</div>
 						<div class="offers__item">
 							<img src="images/dest/offer-4.png" alt="" class="offers__item-image">
 							<div class="offers__item-type">Профессиональный монитор</div>
 							<div class="offers__item-name">Modern MD271PW</div>
-							<div class="offers__item-btn btn">Подробнее</div>
+							<a href="#" class="offers__item-btn btn">Подробнее</a>
 						</div>
 					</div>
 				</section>
