--- a/msi-xmas/index.html
+++ b/msi-xmas/index.html
@@ -8,113 +8,132 @@
 		<link rel="stylesheet" href="css/app.min.css">
 	</head>
 	<body>
-		<div class="bg">
-			<a href="/" class="logo">
-				<img src="images/dest/logo.png" alt="logo">
-			</a>
-			<section class="banner">
-				<div class="banner__tagline">
-					<img src="images/dest/tagline-new.png" alt="">
+		<div class="overflow">	
+			<div class="bg">
+				<a href="/" class="logo">
+					<img src="images/dest/logo.png" alt="logo">
+				</a>
+				<div class="hamburger-icon">
+					<div></div>
+					<div></div>
+					<div></div>
 				</div>
-				<div class="banner__images">
-					<div class="banner__image">
-						<img src="images/dest/banner-1.png" alt="">
+				<section class="banner">
+					<div class="banner__tagline">
+						<picture>
+							<source srcset="images/dest/tagline-mob.png" media="(max-width: 767px)" />
+							<img src="images/dest/tagline-new.png" alt="" />
+						  </picture>
+						<img src="" alt="">
 					</div>
-					<div class="banner__image">
-						<img src="images/dest/banner-2.png" alt="">
-					</div>
-					<div class="banner__image">
-						<img src="images/dest/banner-3.png" alt="">
-					</div>
-				</div>
-			</section>
-			<div class="wrapper">
-				<section class="stories">
-					<div class="stories__title title">Наши истории</div>
-					<div class="stories__text">Жизнь прекрасна и замечательна, а поэтому важно ценить каждый миг, получать удовольствие от происходящего, и ценить сердечные моменты с родными! Радость можно найти даже в самых незначительных и мимолетных вещах, не так ли? Главное - научиться ловить такие моменты! </div>
-					<div class="stories__list">
-						<div class="stories__item">
-							<div class="stories__item-image">
-								<img src="images/dest/story-1.png" alt="">
-							</div>
-							<div class="stories__item-text">Никогда не забуду, как мы с братом играли в старую приставку, для того чтобы решить, кто будет выполнять задание от мамы. Например, вынести мусор. Это были невероятные битвы, и брат побеждал чаще меня. Мы так заигрывались, что в итоге мусор за нас выносила мама.</div>
+					<div class="banner__images">
+						<div class="banner__image">
+							<img src="images/dest/banner-1.png" alt="">
 						</div>
-						<div class="stories__item">
-							<div class="stories__item-image">
-								<img src="images/dest/story-2.png" alt="">
-							</div>
-							<div class="stories__item-text">Когда я была маленькой, мама работала швеей и шила мне почти все мягкие игрушки сама. Однажды, после школьного спектакля нам всем дарили подарки от родителей, всем детям подарили модные игрушки, а мне сшитую и я сразу поняла, что ее сшила мама.<br> Я так расстроилась, и мне было так грустно. Сейчас понимаю что это была моя самая любимая игрушка на свете, а теперь с ней не расстается и моя дочка.</div>
+						<div class="banner__image">
+							<img src="images/dest/banner-2.png" alt="">
 						</div>
-						<div class="stories__item">
-							<div class="stories__item-image">
-								<img src="images/dest/story-3.png" alt="">
-							</div>
-							<div class="stories__item-text">Помню, когда мне снились кошмары, я бежал к папе в кабинет, и рассказывал ему о том, что мне приснилось. Он откладывал работу, внимательно слушал и параллельно рисовал тех монстров которых я описывал. Каждый раз получались милые существа, я говорил “папа но он былне такой!”<br> На что папа отвечал:  “Напомни, какой он был?” Но к этому моменту в голове уже был образ мультяшек, которых он нарисовал, и бояться было уже нечего!</div>
-						</div>
-						<div class="stories__item">
-							<div class="stories__item-image">
-								<img src="images/dest/story-4.png" alt="">
-							</div>
-							<div class="stories__item-text">Первый раз, когда я увидел деда мороза, я сразу понял, что это мой папа. За пару минут до двенадцати, он уходил из комнаты и сразу после боя курантов у нас появлялся дед мороз. В этот и все последующие разы я делал вид что не узнаю его.</div>
+						<div class="banner__image">
+							<img src="images/dest/banner-3.png" alt="">
 						</div>
 					</div>
 				</section>
+				<div class="wrapper">
+					<section data-block="1" class="stories block">
+						<div class="stories__title title">Наши истории</div>
+						<div class="stories__text">Жизнь прекрасна и замечательна, а поэтому важно ценить каждый миг, получать удовольствие от происходящего, и ценить сердечные моменты с родными! Радость можно найти даже в самых незначительных и мимолетных вещах, не так ли? Главное - научиться ловить такие моменты! </div>
+						<div class="stories__list">
+							<div class="stories__item">
+								<div class="stories__item-image">
+									<img src="images/dest/story-1.png" alt="">
+								</div>
+								<div class="stories__item-text">Никогда не забуду, как мы с братом играли в старую приставку, для того чтобы решить, кто будет выполнять задание от мамы. Например, вынести мусор. Это были невероятные битвы, и брат побеждал чаще меня. Мы так заигрывались, что в итоге мусор за нас выносила мама.</div>
+							</div>
+							<div class="stories__item">
+								<div class="stories__item-image">
+									<img src="images/dest/story-2.png" alt="">
+								</div>
+								<div class="stories__item-text">Когда я была маленькой, мама работала швеей и шила мне почти все мягкие игрушки сама. Однажды, после школьного спектакля нам всем дарили подарки от родителей, всем детям подарили модные игрушки, а мне сшитую и я сразу поняла, что ее сшила мама.<br> Я так расстроилась, и мне было так грустно. Сейчас понимаю что это была моя самая любимая игрушка на свете, а теперь с ней не расстается и моя дочка.</div>
+							</div>
+							<div class="stories__item">
+								<div class="stories__item-image">
+									<img src="images/dest/story-3.png" alt="">
+								</div>
+								<div class="stories__item-text">Помню, когда мне снились кошмары, я бежал к папе в кабинет, и рассказывал ему о том, что мне приснилось. Он откладывал работу, внимательно слушал и параллельно рисовал тех монстров которых я описывал. Каждый раз получались милые существа, я говорил “папа но он былне такой!”<br> На что папа отвечал:  “Напомни, какой он был?” Но к этому моменту в голове уже был образ мультяшек, которых он нарисовал, и бояться было уже нечего!</div>
+							</div>
+							<div class="stories__item">
+								<div class="stories__item-image">
+									<img src="images/dest/story-4.png" alt="">
+								</div>
+								<div class="stories__item-text">Первый раз, когда я увидел деда мороза, я сразу понял, что это мой папа. За пару минут до двенадцати, он уходил из комнаты и сразу после боя курантов у нас появлялся дед мороз. В этот и все последующие разы я делал вид что не узнаю его.</div>
+							</div>
+						</div>
+					</section>
+				</div>
 			</div>
-		</div>
-		<div class="bg-2">
-			<div class="wrapper">
-				<section class="contest">
-					<div class="contest__title title">Участвуй в конкурсе!</div>
-					<div class="contest__block">
-						<div class="contest__block-image">
-							<img src="images/dest/contest.png" alt="">
+			<div class="bg-2">
+				<div class="wrapper">
+					<section data-block="2" class="contest block">
+						<div class="contest__title title">Участвуй в конкурсе!</div>
+						<div class="contest__block">
+							<div class="contest__block-image">
+								<img src="images/dest/contest.png" alt="">
+							</div>
+							<div class="contest__block-content">
+								<div class="contest__block-text">А теперь и ты поделись самым теплым воспоминанием из своей жизни, которое ты успел поймать! Расскажи добрую историю из детства у себя на странице VK и получи шанс выиграть главный приз - Моноблок MSI Modern AM242!</div>
+								<a href="#" class="contest__block-btn btn">Подробнее</a>
+							</div>
 						</div>
-						<div class="contest__block-content">
-							<div class="contest__block-text">А теперь и ты поделись самым теплым воспоминанием из своей жизни, которое ты успел поймать! Расскажи добрую историю из детства у себя на странице VK и получи шанс выиграть главный приз - Моноблок MSI Modern AM242!</div>
-							<a href="#" class="contest__block-btn btn">Подробнее</a>
+					</section>
+					<section data-block="3" class="offers block">
+						<div class="offers__title title">Предложения от Лаки</div>
+						<div class="offers__text">Ежедневные дела и задачи часто отвлекают нас от того, что действительно важно. Чтобы оставить больше времени на прекрасные моменты, а не на выбор подарков, мы подготовили наши предложения для вас и ваших близких!</div>
+						<div class="offers__list">
+							<div class="offers__item">
+								<img src="images/dest/offer-1.png" alt="" class="offers__item-image">
+								<div class="offers__item-type">Игровой десктоп</div>
+								<div class="offers__item-name">MAG Codex 5</div>
+								<a href="#" class="offers__item-btn btn">Подробнее</a>
+							</div>
+							<div class="offers__item">
+								<img src="images/dest/offer-2.png" alt="" class="offers__item-image">
+								<div class="offers__item-type">Игровой монитор</div>
+								<div class="offers__item-name">Optix MAG321QR</div>
+								<a href="#" class="offers__item-btn btn">Подробнее</a>
+							</div>
+							<div class="offers__lucky">
+								<img src="images/dest/lucky.png" alt="" class="offers__lucky-image">
+							</div>
+							<div class="offers__item">
+								<img src="images/dest/offer-3.png" alt="" class="offers__item-image">
+								<div class="offers__item-type">Моноблок</div>
+								<div class="offers__item-name">Modern AM242</div>
+								<a href="#" class="offers__item-btn btn">Подробнее</a>
+							</div>
+							<div class="offers__item">
+								<img src="images/dest/offer-4.png" alt="" class="offers__item-image">
+								<div class="offers__item-type">Профессиональный монитор</div>
+								<div class="offers__item-name">Modern MD271PW</div>
+								<a href="#" class="offers__item-btn btn">Подробнее</a>
+							</div>
 						</div>
-					</div>
-				</section>
-				<section class="offers">
-					<div class="offers__title title">Предложения от Лаки</div>
-					<div class="offers__text">Ежедневные дела и задачи часто отвлекают нас от того, что действительно важно. Чтобы оставить больше времени на прекрасные моменты, а не на выбор подарков, мы подготовили наши предложения для вас и ваших близких!</div>
-					<div class="offers__list">
-						<div class="offers__item">
-							<img src="images/dest/offer-1.png" alt="" class="offers__item-image">
-							<div class="offers__item-type">Игровой десктоп</div>
-							<div class="offers__item-name">MAG Codex 5</div>
-							<a href="#" class="offers__item-btn btn">Подробнее</a>
-						</div>
-						<div class="offers__item">
-							<img src="images/dest/offer-2.png" alt="" class="offers__item-image">
-							<div class="offers__item-type">Игровой монитор</div>
-							<div class="offers__item-name">Optix MAG321QR</div>
-							<a href="#" class="offers__item-btn btn">Подробнее</a>
-						</div>
-						<div class="offers__lucky">
-							<img src="images/dest/lucky.png" alt="" class="offers__lucky-image">
-						</div>
-						<div class="offers__item">
-							<img src="images/dest/offer-3.png" alt="" class="offers__item-image">
-							<div class="offers__item-type">Моноблок</div>
-							<div class="offers__item-name">Modern AM242</div>
-							<a href="#" class="offers__item-btn btn">Подробнее</a>
-						</div>
-						<div class="offers__item">
-							<img src="images/dest/offer-4.png" alt="" class="offers__item-image">
-							<div class="offers__item-type">Профессиональный монитор</div>
-							<div class="offers__item-name">Modern MD271PW</div>
-							<a href="#" class="offers__item-btn btn">Подробнее</a>
-						</div>
-					</div>
-				</section>
-			</div>
-			<footer class="footer">
-				<div class="footer__inner">
-					<img src="images/dest/footer-logo.png" alt="" class="footer__logo">
-					<div class="footer__text">MSICOPYRIGHT © 2022 MICRO-STAR INT`L CO., LTD. ALL RIGHTS RESERVED.</div>
+					</section>
 				</div>
-			</footer>
+				<footer class="footer">
+					<div class="footer__inner">
+						<img src="images/dest/footer-logo.png" alt="" class="footer__logo">
+						<div class="footer__text">MSICOPYRIGHT © 2022 MICRO-STAR INT`L CO., LTD. ALL RIGHTS RESERVED.</div>
+					</div>
+				</footer>
+			</div>
+			<div class="hamburger-menu">
+				<a href="/" class="hamburger-menu__logo logo">
+					<img src="images/dest/logo.png" alt="logo">
+				</a>
+				<div data-block="1" class="hamburger-menu__item">Наши истории</div>
+				<div data-block="2" class="hamburger-menu__item">Конкурс</div>
+				<div data-block="3" class="hamburger-menu__item">Продукт</div>
+			</div>
 		</div>
 		<!-- Подключаем скрипты проекта -->
 		<script src="js/app.min.js"></script>
