--- a/sortmet/catalog-element.html
+++ b/sortmet/catalog-element.html
@@ -375,7 +375,7 @@
 											<div class="catalog-element__content-price-current">49 000 ₽/тн</div>
 											<div class="catalog-element__content-price-old">102 800 р</div>
 										</div>
-										<div class="catalog-element__content-avaliable">В наличии</div>
+										<div class="catalog-element__content-avaliable">В наличии 36 тн</div>
 									</div>
 									<div class="catalog-element__content-actions actions">
 										<div class="actions__item">
@@ -703,11 +703,12 @@
 								</div>
 							</div>
 							<div class="seo">
-								<div class="title">Тут будет SEO текст</div>
+								<div class="title">Текст про доставку</div>
 								<div class="seo__content">
-									<p>Гипермаркет металла «Сортмет» - это крупнейшая площадка в интернете, на который вы можете приобрести широкий ассортимент изделий из черных и цветных металлов. Мы предлагаем качественную продукцию по доступным ценам, которая полностью соответствует международным и российским стандартам качества.</p>
-									<p>Хотите приобрести прокат? Воспользовавшись услугами компании «Сортмет», вам не придется думать об аренде транспортного средства для перевозки металла с места хранения на стройку или производственный склад.</p>
 									<p>Наш гипермаркет располагает собственным парком специализированных грузовых автомобилей, которые адаптированы для перевозки длинного и тяжелого проката. К вашим услугам:</p>
+									<p>Автомобиль «Газель» грузоподъемностью 3 т, который может перевозить металлопрокат длиной до 6 м. Стоимость услуги по транспортировке составляет 5000 рублей плюс 20 рублей за каждый км пробега, считается в 2е стороны.</p>
+									<p>Автомобиль «Валдай». Грузоподъемность 5 т, максимальная длина загружаемого проката – 6 м. Цена заказа машины 8000 р плюс оплата 25 р за каждый км, считается в 2е стороны</p>
+									<p>Автомобиль МАЗ. Спецтранспорт с кузовом, в который влезает металлический прокат длиной до 12 м. За один рейс можно загрузить 20 т продукции. Цена заказа машины 12000 р плюс оплата 40 р за каждый км, считается в 2е стороны.</p>
 									<ul>
 										<li>Автомобиль «Газель» грузоподъемностью 3 т, который может перевозить металлопрокат длиной до 6 м. Стоимость услуги по транспортировке составляет 4000 рублей плюс 20 рублей за каждый км пробега, считается в 2е стороны.</li>
 										<li>Автомобиль «Валдай». Грузоподъемность 5 т, максимальная длина загружаемого проката – 6 м. Цена заказа машины 7000 р плюс оплата 25 р за каждый км, считается в 2е стороны</li>
@@ -726,7 +727,7 @@
 						<div class="title info-block__controller">Оплата</div>
 						<div class="info-block__mobile">
 							<div class="payment__list">
-								<div class="payment__item">
+								<!-- <div class="payment__item">
 									<div class="payment__item-icon payment__item-icon_default">
 										<img src="images/dest/paysistems.svg" alt="" width="200" height="42">
 									</div>
@@ -735,7 +736,7 @@
 									</div>
 									<div class="payment__item-caption">Оплата банковской картой</div>
 									<div class="payment__item-text">Вы можете оплатить заказ банковской картой у нас на сайте</div>
-								</div>
+								</div> -->
 								<div class="payment__item">
 									<svg class="payment__item-icon payment__item-icon_default" width="42" height="42">
 										<use xlink:href="images/dest/sprite.svg#card"></use>
@@ -782,6 +783,8 @@
 							<div class="btn title__content">Написать отзыв</div>
 						</div>
 						<div class="info-block__mobile">
+							<div class="info-block__mobile-btn">Написать отзыв</div>
+
 							<div class="reviews-second__list">
 								<div class="reviews-second__item">
 									<div class="reviews-second__item-row">
@@ -826,6 +829,7 @@
 									<div class="reviews-second__item-text">15.12.20 Заказали тонну оцинкованных листов, на сайте прочитал, что если заказывать до обеда, то возможна доставка в день заказа, и ведь не соврали! Очень рекомендую Сортамент, действительно качество на все сто!</div>
 								</div>
 							</div>
+							<div class="reviews-second__show-more"><span>Показать ещё отзывы</span></div>
 							<form action="" class="form form_blue">
 								<div class="form__block">
 									<div class="form__title">Проконсультируем по любым вопросам</div>
@@ -2575,6 +2579,29 @@
 						<div class="slider-pagination" id="catalog-slider-2-pagination"></div>
 					</div>
 				</div>
+
+				<section class="tags-second">
+					<div class="title">Часто покупают</div>
+					<div class="tags-second__list " id="catalog-tags-slider">
+							<a href="#" class="tags-second__item">Оцинкованный 20x20x4</a>
+							<a href="#" class="tags-second__item">Уголок стальной</a>
+							<a href="#" class="tags-second__item">Низколегированный</a>
+							<a href="#" class="tags-second__item">Уголок ГОСТ 8509</a>
+							<a href="#" class="tags-second__item">Уголок горячекатанный</a>
+							<a href="#" class="tags-second__item">Уголок 10х15х4</a>
+							<a href="#" class="tags-second__item">Арматура А240</a>
+							<a href="#" class="tags-second__item">Рифленая арматура</a>
+							<a href="#" class="tags-second__item">Сортамент арматуры</a>
+							<a href="#" class="tags-second__item">Вес арматуры</a>
+							<a href="#" class="tags-second__item">Арматура для фундамента</a>
+							<a href="#" class="tags-second__item">Арматура для армопояса</a>
+							<a href="#" class="tags-second__item">Скидка на арматуру</a>
+							<a href="#" class="tags-second__item">Скидки на квадратную профтрубу</a>
+							<a href="#" class="tags-second__item">Профнастил зеленый</a>
+							<a href="#" class="tags-second__item">Зелёный евроштакетник</a>
+							<a href="#" class="tags-second__item">Профнастил вишневый</a>
+					</div>
+				</section>
 
 				<div class="catalog-slider">
 					<div class="title">Вы недавно смотрели</div>
