--- a/sortmet/index.html
+++ b/sortmet/index.html
@@ -2250,7 +2250,7 @@
 										</div>
 										<div class="reviews__item-text">Мне очень нравится работать с компанией Сортамент. После отправки заявки мне всегда сразу перезванивают менеджеры и уточняют детали, товар всегда в наличии</div>
 									</div>
-									<div class="reviews__item-link">Оригинал отзыва</div>
+									<div class="reviews__item-link reviews__item-link_doc">Оригинал документа</div>
 								</div>
 								<div class="reviews__item swiper-slide">
 									<div class="reviews__item-content">
@@ -2266,7 +2266,7 @@
 										</div>
 										<div class="reviews__item-text">Хочется сказать большое спасибо моему менеджеру Анне! О металле знает все вдоль и поперек, вопросов после консультации не осталось, осталось только желание продолжать сотрудничество.</div>
 									</div>
-									<div class="reviews__item-link">Оригинал отзыва</div>
+									<div class="reviews__item-link reviews__item-link_google">Оригинал отзыва</div>
 								</div>
 								<div class="reviews__item swiper-slide">
 									<div class="reviews__item-content">
@@ -2282,7 +2282,7 @@
 										</div>
 										<div class="reviews__item-text">Спасибо менеджерам за быструю работу! Были вопросы по поводу обработки сплава, проконсультировали профессионально, быстро оформили все документы. Доставка уже на следующий день! Точно еще обращусь.</div>
 									</div>
-									<div class="reviews__item-link">Оригинал отзыва</div>
+									<div class="reviews__item-link reviews__item-link_vk">Оригинал отзыва</div>
 								</div>
 								<div class="reviews__item swiper-slide">
 									<div class="reviews__item-content">
@@ -2298,7 +2298,7 @@
 										</div>
 										<div class="reviews__item-text">Мне очень нравится работать с компанией Сортамент. После отправки заявки мне всегда сразу перезванивают менеджеры и уточняют детали, товар всегда в наличии</div>
 									</div>
-									<div class="reviews__item-link">Оригинал отзыва</div>
+									<div class="reviews__item-link reviews__item-link_doc">Оригинал документа</div>
 								</div>
 								<div class="reviews__item swiper-slide">
 									<div class="reviews__item-content">
@@ -2314,7 +2314,7 @@
 										</div>
 										<div class="reviews__item-text">Хочется сказать большое спасибо моему менеджеру Анне! О металле знает все вдоль и поперек, вопросов после консультации не осталось, осталось только желание продолжать сотрудничество.</div>
 									</div>
-									<div class="reviews__item-link">Оригинал отзыва</div>
+									<div class="reviews__item-link reviews__item-link_google">Оригинал отзыва</div>
 								</div>
 								<div class="reviews__item swiper-slide">
 									<div class="reviews__item-content">
@@ -2330,7 +2330,7 @@
 										</div>
 										<div class="reviews__item-text">Спасибо менеджерам за быструю работу! Были вопросы по поводу обработки сплава, проконсультировали профессионально, быстро оформили все документы. Доставка уже на следующий день! Точно еще обращусь.</div>
 									</div>
-									<div class="reviews__item-link">Оригинал отзыва</div>
+									<div class="reviews__item-link reviews__item-link_vk">Оригинал отзыва</div>
 								</div>
 							</div>
 						</div>
