--- a/sortmet/catalog-second.html
+++ b/sortmet/catalog-second.html
@@ -2871,7 +2871,7 @@
 									</div>
 									<div class="reviews__item-text">Мне очень нравится работать с компанией Сортамент. После отправки заявки мне всегда сразу перезванивают менеджеры и уточняют детали, товар всегда в наличии</div>
 								</div>
-								<div class="reviews__item-link">Оригинал отзыва</div>
+								<div class="reviews__item-link reviews__item-link_doc">Оригинал документа</div>
 							</div>
 							<div class="reviews__item swiper-slide">
 								<div class="reviews__item-content">
@@ -2887,7 +2887,7 @@
 									</div>
 									<div class="reviews__item-text">Хочется сказать большое спасибо моему менеджеру Анне! О металле знает все вдоль и поперек, вопросов после консультации не осталось, осталось только желание продолжать сотрудничество.</div>
 								</div>
-								<div class="reviews__item-link">Оригинал отзыва</div>
+								<div class="reviews__item-link reviews__item-link_google">Оригинал отзыва</div>
 							</div>
 							<div class="reviews__item swiper-slide">
 								<div class="reviews__item-content">
@@ -2903,7 +2903,7 @@
 									</div>
 									<div class="reviews__item-text">Спасибо менеджерам за быструю работу! Были вопросы по поводу обработки сплава, проконсультировали профессионально, быстро оформили все документы. Доставка уже на следующий день! Точно еще обращусь.</div>
 								</div>
-								<div class="reviews__item-link">Оригинал отзыва</div>
+								<div class="reviews__item-link reviews__item-link_vk">Оригинал отзыва</div>
 							</div>
 							<div class="reviews__item swiper-slide">
 								<div class="reviews__item-content">
@@ -2919,7 +2919,7 @@
 									</div>
 									<div class="reviews__item-text">Мне очень нравится работать с компанией Сортамент. После отправки заявки мне всегда сразу перезванивают менеджеры и уточняют детали, товар всегда в наличии</div>
 								</div>
-								<div class="reviews__item-link">Оригинал отзыва</div>
+								<div class="reviews__item-link reviews__item-link_doc">Оригинал документа</div>
 							</div>
 							<div class="reviews__item swiper-slide">
 								<div class="reviews__item-content">
@@ -2935,7 +2935,7 @@
 									</div>
 									<div class="reviews__item-text">Хочется сказать большое спасибо моему менеджеру Анне! О металле знает все вдоль и поперек, вопросов после консультации не осталось, осталось только желание продолжать сотрудничество.</div>
 								</div>
-								<div class="reviews__item-link">Оригинал отзыва</div>
+								<div class="reviews__item-link reviews__item-link_google">Оригинал отзыва</div>
 							</div>
 							<div class="reviews__item swiper-slide">
 								<div class="reviews__item-content">
@@ -2951,7 +2951,7 @@
 									</div>
 									<div class="reviews__item-text">Спасибо менеджерам за быструю работу! Были вопросы по поводу обработки сплава, проконсультировали профессионально, быстро оформили все документы. Доставка уже на следующий день! Точно еще обращусь.</div>
 								</div>
-								<div class="reviews__item-link">Оригинал отзыва</div>
+								<div class="reviews__item-link reviews__item-link_мл">Оригинал отзыва</div>
 							</div>
 						</div>
 					</div>
@@ -2959,6 +2959,40 @@
 					<div class="arrow arrow_prev" id="reviews-prev"></div>
 					<div class="slider-pagination" id="reviews-pagination"></div>
 				</div>
+			</section>
+			<section class="map">
+				<div class="title">Карта доставки стального уголка в Москве</div>
+				<img src="images/dest/delivery-map.webp" alt="">
+			</section>
+			<section class="selection">
+				<div class="title">Карта доставки стального уголка в Москве</div>
+				<div class="selection__list">
+					<a href="#" class="selection__item">Оцинкованный 20x20x4</a>
+					<a href="#" class="selection__item">Уголок стальной</a>
+					<a href="#" class="selection__item">Низколегированный</a>
+					<a href="#" class="selection__item">Уголок ГОСТ 8509</a>
+					<a href="#" class="selection__item">Уголок горячекатанный</a>
+					<a href="#" class="selection__item">Уголок 10х15х4</a>
+					<a href="#" class="selection__item">Арматура А240</a>
+					<a href="#" class="selection__item">Рифленая арматура</a>
+					<a href="#" class="selection__item">Сортамент арматуры</a>
+					<a href="#" class="selection__item">Вес арматуры</a>
+					<a href="#" class="selection__item">Арматура для фундамента</a>
+					<a href="#" class="selection__item">Арматура для армопояса</a>
+					<a href="#" class="selection__item">Низколегированный</a>
+					<a href="#" class="selection__item">Уголок ГОСТ 8509</a>
+					<a href="#" class="selection__item">Уголок горячекатанный</a>
+					<a href="#" class="selection__item">Уголок 10х15х4</a>
+					<a href="#" class="selection__item">Арматура А240</a>
+					<a href="#" class="selection__item">Рифленая арматура</a>
+					<a href="#" class="selection__item">Уголок горячекатанный</a>
+					<a href="#" class="selection__item">Уголок 10х15х4</a>
+					<a href="#" class="selection__item">Арматура А240</a>
+					<a href="#" class="selection__item">Рифленая арматура</a>
+					<a href="#" class="selection__item">Сортамент арматуры</a>
+					<a href="#" class="selection__item">Скидка на арматуру</a>
+				</div>
+				<div class="selection__show-more"><span>Показать ещё</span></div>
 			</section>
 		</div>
 		<div class="gray gray_nb">
